<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="group">Group: </string>
    <string name="date">Date: </string>
    <string name="category">Category: </string>
    <string name="title_activity_single_group_details">Your Group Details</string>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="amount">Amount</string>
    <string name="description">Description: </string>
    <string name="Add">ADD</string>
    <string name="email">Email</string>
    <string name="groupName">Group Name</string>
    <string name="Register">Register</string>
    <string name="username">Username</string>
    <string name="usernameWithColon">Username: </string>
    <string name="password">Password</string>
    <string name="emailwithcolon">Email: </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="graph">Graph</string>
    <string name="groupExpense">Group Expenses</string>
    <string name="bywithcolon">By: </string>
    <string name="you">You </string>
    <string name="piechart">Piechart </string>
    <string name="groupNamewithcolon">Group Name: </string>
    <string name="title_activity_friends_view">Your Friends</string>
    <string name="title_activity_add_group">Add New Group</string>
    <string name="nofriendstext">Your Friendlist is empty</string>
    <string name="editgroup">Edit Group</string>
    <string name="nogrouptext">Your GroupList is Empty</string>
    <string name="deletegroup">Delete Group</string>
    <string name="submit">Submit</string>
    <string name="fromwithcolon">From: </string>
    <string name="towithcolon">To: </string>
    <string name="nopiecharttext">There is no pie chart for your input </string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_single_group_expense">Your Group Expenses</string>
    <string name="noExpenseMessage">You have not added any Expenses yet</string>
    <string name="noDataMessage">Please select the date and group for displaying summary of your data</string>
    <string name="noPieCharttext">There is not enough data for your Pie chart </string>
    <string name="noDataForGraph">There is not enough data for your Graph </string>













    <string-array name="category_array">
        <item>Restaurant</item>
        <item>Groceries</item>
        <item>Bills</item>
        <item>Food</item>
        <item>gas</item>
        <item>shopping</item>
        <item>Education</item>
        <item>Travelling</item>
        <item>Utilities</item>
    </string-array>


    <string-array name="navigationItems">
        <item>Home</item>
        <item>Summary</item>
        <item>Logout</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
