<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:paddingTop="20dp"
    tools:context="com.expensetracker.Activities.RegisterUser">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:paddingBottom="10dp"
        />

    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/useremail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/register"
        style="@style/Button_custom_theme"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/Register" />


</LinearLayout>