<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.expensetracker.Activities.Updatexpense">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:scrollbars="none"
            app:behavior_overlapTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/edit_box_shape"
                        style="@style/EditBox_custom_theme"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"

                        android:background="@drawable/edit_box_shape"
                        style="@style/EditBox_custom_theme"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />

                    <Spinner
                        android:id="@+id/groupnameSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />




                    <EditText
                        android:id="@+id/datepicker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_box_shape"
                        style="@style/EditBox_custom_theme"
                        ></EditText>

                </LinearLayout>


                <Button
                    android:id="@+id/add_expense"

                    style="@style/Button_custom_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_shape"
                    android:text="@string/Add" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/menu_pane_holder" />

</android.support.v4.widget.DrawerLayout>
