<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expensetracker.Activities.Summary">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <!--<android.support.v4.widget.NestedScrollView-->
            <!--android:id="@+id/scroll_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:paddingBottom="35dp"-->
            <!--android:scrollbars="none"-->
            <!--app:behavior_overlapTop="30dp"-->
            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fromwithcolon" />


                    <TextView
                        android:id="@+id/from"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_box_shape" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/towithcolon" />

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_box_shape" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/groupSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <!--<Button-->
                    <!--android:id="@+id/submit"-->
                    <!--style="@style/Button_custom_theme"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/button_shape"-->
                    <!--android:text="@string/submit" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="horizontal">-->

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="left"
                        android:visibility="gone"
                        />

                <!--</LinearLayout>-->

                <TextView
                    android:id="@+id/nopiechart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nopiecharttext"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textSize="30dp"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/expense_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />


            </LinearLayout>

        <!--</android.support.v4.widget.NestedScrollView>-->

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/menu_pane_holder" />

</android.support.v4.widget.DrawerLayout>
